--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-*.html linguist-language=csharp
-*.css linguist-language=csharp 
-*.js linguist-language=csharp 
+*.js linguist-language=c#
+*.css linguist-language=c#
+*.html linguist-language=c#
 
 ###############################################################################
 # Set default behavior for command prompt diff.
